--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,11 +4,12 @@
 
 body
   font-family: 'CircularStd-Regular'
-  font-size: 66px
+  font-size: 77px
   background-color: #235124
   background-image: url('../assets/img/boots.png')
-h1
-  background-image: url('../assets/icon/bag.svg')
+  display: flex
+  flex-direction: column
+
 
 
 @import '_footer.sass'
