--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -27,7 +27,7 @@
 //Helvetica
 @font-face 
   font-family: 'Helvetica-Bold'
-  src: url('../assets/fonts/Helvetica-Bold.ttf') format('truetype')
+  src: url('../assets/fonts/Helvetica-Bold.woff2') format('truetype')
   font-style: normal
   font-weight: 700
 
