--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -1,33 +1,63 @@
 //CircularStd
-  @font-face 
+@font-face 
   font-family: 'CircularStd-Regular'
-  src: url('../assets/fonts/CircularStd-Regular.ttf') format('truetype')
+  src: url('../assets/fonts/CircularStd-Regular.woff2') format('truetype')
   font-style: normal
   font-weight: 400
 
 @font-face 
+  font-family: 'CircularStd-Medium'
+  src: url('../assets/fonts/CircularStd-Medium.woff2') format('truetype')
+  font-style: normal
+  font-weight: 500
+
+@font-face 
   font-family: 'CircularStd-Bold'
-  src: url('../assets/fonts/CircularStd-Bold.ttf') format('truetype')
+  src: url('../assets/fonts/CircularStd-Bold.woff2') format('truetype')
   font-style: normal
   font-weight: 700
 
 //SofiaPro
 @font-face 
-  font-family: 'SofiaPro-Regular'
-  src: url('../assets/fonts/SofiaPro-Regular.ttf') format('truetype')
+  font-family: 'SofiaProRegular'
+  src: url('../assets/fonts/SofiaProRegular.woff2') format('truetype')
   font-style: normal
   font-weight: 400
 
 @font-face 
-  font-family: 'SofiaPro-Light'
-  src: url('../assets/fonts/SofiaPro-Light.ttf') format('truetype')
+  font-family: 'SofiaProLight'
+  src: url('../assets/fonts/SofiaProLight.woff2') format('truetype')
+  font-style: normal
+  font-weight: 300
+ 
+@font-face 
+  font-family: 'SofiaProExtraLight'
+  src: url('../assets/fonts/SofiaProExtraLight.woff2') format('truetype')
+  font-style: normal
+  font-weight: 200
+
+@font-face 
+  font-family: 'SofiaProUltraLight'
+  src: url('../assets/fonts/SofiaProUltraLight.woff2') format('truetype')
   font-style: normal
   font-weight: 300
 
 //Helvetica
 @font-face 
-  font-family: 'Helvetica-Bold'
-  src: url('../assets/fonts/Helvetica-Bold.woff2') format('truetype')
+  font-family: 'helvetica_bold'
+  src: url('../assets/fonts/helvetica_bold.otf') format('truetype')
   font-style: normal
   font-weight: 700
 
+//Montserrat
+@font-face 
+  font-family: 'Montserrat-Regular'
+  src: url('../assets/fonts/Montserrat-Regular.ttf') format('truetype')
+  font-style: normal
+  font-weight: 400
+
+@font-face 
+  font-family: 'Montserrat-Medium'
+  src: url('../assets/fonts/Montserrat-Medium.ttf') format('truetype')
+  font-style: normal
+  font-weight: 500
