--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,2 +1,25 @@
-.icon-bag
-  fill: red
+.menu
+  display: flex
+  justify-content: space-between
+.menu-logo
+  font-weight: 700
+  font-size: 32px
+  line-height: 18px
+
+  color: #000000
+  & sup
+    font-weight: 400
+    font-size: 12px 
+    line-height: 15px
+
+    color: #000000
+
+.menu-navigation
+  display: flex
+
+.menu-navigation__link  
+  padding: 0 25px 0 0
+  & :last-child
+    padding: 0 0 0 0
+svg
+  color: black
