--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -86,25 +86,94 @@ ul, li
 .text-left
 	font-style: 700
 	color: white
-
+	font-family: 'SofiaProRegular'
 	background: #000000
 .text-right
-.main-page__learnmore
+.left-page__learnmore
+	display: flex
+	margin: 38px 0 0 0
+
+.line
+	content: ''
+	display: block
+	margin: 10px 69px 0 10px
+	width: 44px
+	height: 1px
+	background-color: #000
+
+.learnmore__text
 	font-family: 'SofiaProRegular'
 	font-size: 15px
 	line-height: 23px
 
 	color: #000000
-.line
-	content: ''
-	position: absolute
-	width: 44px
-	border-top: 1px solid #4e4e4e
-.learnmore__text
+.text__link
+	text-decoration: none
+	color: #000000
+.left-page__scroll
+	margin: 122px 0 50px 10px
 .page-center
+	margin: 34px 0 0 109px
 .page-center__content
+	& p
+		font-family: 'SofiaProRegular'
+		font-size: 21px
+		line-height: 32px
+
+		color: #000000
+
+		opacity: 0.4
+		text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+	& h1
+
+		font-family: 'SofiaProExtraLight'
+		font-weight: 200
+		font-style: normal
+		font-size: 62px
+		text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+		color: #000000
+		& sup
+			font-size: 22px
+
 .content__buttons
+	margin: 50px 0 0 0
 .buttons__add
+	display: inline-flex
+	align-items: center
+	justify-content: center
+	width: 185px
+	height: 72px
+	font-family: 'Montserrat-Medium'
+	font-style: normal
+	font-weight: 500
+	font-size: 15px
+	line-height: 18px
+	color: #FFFFFF
+	background: #030304
+	border-radius: 8px
+.feather-shopping-bag
+	color: #FFFFFF
+	margin: 0 12.5px 0 0
 .buttons__watch
+	display: inline-flex
+	align-items: center
+	justify-content: center
+	width: 185px
+	height: 72px
+	font-family: 'Montserrat-Regular'
+	font-style: normal
+	font-weight: 400
+	font-size: 15px
+	line-height: 18px
+	margin: 0 0 0 24px
+	color: #030304
+
+	background: #FFFFFF
+
+	border: 1px solid #808080
+	box-sizing: border-box
+	border-radius: 8px
+.feather-play-circle
+	margin: 0 12.5px 0 0
 
 @import '_footer.sass'
