--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,3 +1,5 @@
+.header
+  margin: 40px 40px 0 50px
 .menu
   display: flex
   justify-content: space-between
@@ -9,7 +11,7 @@
   color: #000000
   & sup
     font-weight: 400
-    font-size: 12px 
+    font-size: 12px
     line-height: 15px
 
     color: #000000
@@ -17,7 +19,7 @@
 .menu-navigation
   display: flex
 
-.menu-navigation__link  
+.menu-navigation__item
   padding: 0 25px 0 0
   &:last-child
     padding: 0 0 0 0
